[package]
name = "matrix-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[toolchain]
channel = "nightly"

[[bin]]
name = "app"
path = "./src/bin/app.rs"

[dependencies]
axum = { version = "0.7.4", features = ["ws"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
axum-macros = "0.4.1"
config = { version = "0.14.0" }
log = "0.4.21"
log-derive = "0.4.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
anyhow = "1.0.81"
once_cell = "1.19.0"
futures = "0.3.30"
matrix-sdk = { version = "0.6.2" }
async-trait = "0.1.79"
url = "2.5.0"
dirs = "5.0.1"
garde = { version = "0.18.0", features = ["full"] }
